--- a/apps/devgen-eureka-five/src/app/app.component.html
+++ b/apps/devgen-eureka-five/src/app/app.component.html
@@ -1,5 +1,4 @@
+<devgen-eureka-five-global-header></devgen-eureka-five-global-header>
 <div class="wrapper">
-  <div class="container">
-    Your component goes here
-  </div>
+  <div class="container">Your component goes here</div>
 </div>
